feat: update .gitignore and pom.xml